--- a/templates/missing.html
+++ b/templates/missing.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 {% include "navigation.html" %}
-Not found
+<div class="accounts"><h1 style="text-align: center">404<br>Not found</h1></div>
 </body>
 </html>
