--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -3,16 +3,15 @@
 <nav class="navMenu">
     <a href="/">Home</a>
     {% if session.username %}
-        <a href="/u/{{ session.username }}">{{ session.username }}</a>
+        <a href="/u/{{ session.username }}">Profile</a>
         <a href="/logout">Log out</a>
     {% else %}
         <a href="/login">Log in</a>
     {% endif %}
     <a href="/contact">Contact</a>
-    {% if session.admin %}<a href="/admin"> Admin panel</a>
+    {% if session.admin %}<a href="/admin">Admin</a>
     {% endif %}
     <div class="dot"></div>
 </nav>
-<br><br><br><br><br>
 <hr>
 </body>
