--- a/static/pastes.css
+++ b/static/pastes.css
@@ -48,11 +48,10 @@ tbody tr:nth-child(even) {
 }
 
 .navMenu {
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    alignment: center;
+    text-align: center;
+    padding: 20px;
+    background: linear-gradient(#272727, #212121, #272727);
 }
 
 .navMenu a {
@@ -87,7 +86,7 @@ label {
 }
 
 input[type=submit] {
-    background: #101010;
+    background: linear-gradient(#272727, #171717, #272727);
     color: #f6f4e6;
     border: 1px solid;
     font-family: "Montserrat", sans-serif;
@@ -140,7 +139,7 @@ input[type='radio']:checked:after {
 }
 
 .accounts {
-    padding: 1% 30% 1%;
+    padding: 3% 30% 3%;
 }
 
 .col-25 {
