--- a/templates/about.html
+++ b/templates/about.html
@@ -14,6 +14,7 @@
         </label>
         <br>
         <input type="submit" value="Apply">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 </div>
 </body>
