--- a/templates/picture.html
+++ b/templates/picture.html
@@ -15,6 +15,7 @@
         File: <input type="file" name="file">
         <p>
             <input type="submit" value="Send">
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 </div>
 
